# soundflow-unity

./: .gitignore  .gitmodules  LICENSE.md  README.md  SoundFlow.sln
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation_issue.md  documentation_issue.yaml  feature_request.md  feature_request.yaml  performance_issue.md  performance_issue.yaml  platform_specific_issue.md  platform_specific_issue.yaml  question.md  question.yaml  security_vulnerability_report.md  security_vulnerability_report.yaml
.github/workflows/: FUNDING.yml  build-extensions-apm.yml  build.yml  greetings.yml  stale.yml
Assets/soundflow-unity/: AudioProcessingModule.cs  Sample.unity  SampleFormat.cs  Test.cs
Assets/soundflow-unity/Components/: NoiseSuppressor.cs
Assets/soundflow-unity/Extensions/: ApmConfig.cs  AudioProcessingModule.cs  NativeMethods.cs  ProcessingConfig.cs  StreamConfig.cs  WebRtcApmModifier.cs
Assets/soundflow-unity/SoundFlow/: ISoundDataProvider.cs
Assets/soundflow-unity/Unity/: UnityAnalyzer.cs  UnityAudioClipProvider.cs  UnityAudioProvider.cs  Util.cs
Extensions/SoundFlow.Extensions.WebRtc.Apm/: AudioProcessingModule.cs  SoundFlow.Extensions.WebRtc.Apm.csproj  SoundFlow.Extensions.WebRtc.Apm.targets
Native/: CMakeLists.txt  library.cpp  library.h
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
Samples/SoundFlow.Samples.EditingMixer/: PersistenceExamples.cs  Program.cs  SpeechBasedExamples.cs
Samples/SoundFlow.Samples.NoiseSuppression/: Program.cs  SoundFlow.Samples.NoiseSuppression.csproj
Samples/SoundFlow.Samples.SimplePlayer/: ComponentTests.cs  EqualizerPresets.cs  Program.cs
Samples/SoundFlow.Samples.SimplePlayer/Properties/: launchSettings.json
Samples/SoundFlow.SimplePlayer/: ComponentTests.cs  DataProviderTests.cs  EqualizerPresets.cs  Program.cs
SoundFlow/: SoundFlow.sln
SoundFlow.Samples.SwitchDevices/: SoundFlow.Samples.SwitchDevices.csproj
SoundFlow/Extensions/SoundFlow.Extensions.WebRtc.Apm/: AudioProcessingModule.cs  README.md  SoundFlow.Extensions.WebRtc.Apm.csproj
SoundFlow/Native/: CMakeLists.txt  library.cpp  library.h
SoundFlow/Samples/SoundFlow.Samples.EditingMixer/: SoundFlow.Samples.EditingMixer.csproj  ToneBasedExamples.cs
SoundFlow/Samples/SoundFlow.Samples.NoiseSuppression/: Program.cs
SoundFlow/Samples/SoundFlow.Samples.SimplePlayer/: DataProviderTests.cs  EqualizerPresets.cs  Program.cs
SoundFlow/Samples/SoundFlow.Samples.SwitchDevices/: Program.cs  SoundFlow.Samples.SwitchDevices.csproj
SoundFlow/SoundFlow/: SoundFlow.csproj
SoundFlow/SoundFlow.Extensions.WebRtc.Apm/: AudioProcessingModule.cs  SoundFlow.Extensions.WebRtc.Apm.csproj
SoundFlow/SoundFlow.Extensions.WebRtc.Apm/Components/: NoiseSuppressor.cs
SoundFlow/SoundFlow.Extensions.WebRtc.Apm/Modifiers/: WebRtcApmModifier.cs
SoundFlow/SoundFlow/Abstracts/: AudioAnalyzer.cs  AudioEngine.cs  SoundComponent.cs  SoundModifier.cs  SoundPlayerBase.cs
SoundFlow/SoundFlow/Components/: EnvelopeGenerator.cs  Filter.cs  LowFrequencyOscillator.cs  Mixer.cs  Oscillator.cs  Recorder.cs  SoundPlayer.cs  SurroundPlayer.cs  VoiceActivityDetector.cs  WsolaTimeStretcher.cs
SoundFlow/SoundFlow/Enums/: Capability.cs  DeviceType.cs  EncodingFormat.cs  PlaybackState.cs  Result.cs  SampleFormat.cs
SoundFlow/SoundFlow/Exceptions/: BackendException.cs
SoundFlow/SoundFlow/Experimental/: NoiseReductionModifier.cs  VoiceActivityDetector.cs
SoundFlow/SoundFlow/Interfaces/: ISoundDecoder.cs  ISoundEncoder.cs  IVisualizationContext.cs  IVisualizer.cs
SoundFlow/SoundFlow/Modifiers/: AlgorithmicReverbModifier.cs  BassBoosterModifier.cs  ChorusModifier.cs  CompressorModifier.cs  DelayModifier.cs  FrequencyBandModifier.cs  HighPassFilter.cs  LowPassModifier.cs  MultiChannelChorusModifier.cs  ParametricEqualizer.cs  TrebleBoosterModifier.cs
SoundFlow/SoundFlow/Providers/: AssetDataProvider.cs  ChunkedDataProvider.cs  MicrophoneDataProvider.cs  NetworkDataProvider.cs  RawDataProvider.cs  StreamDataProvider.cs
SoundFlow/SoundFlow/Structs/: DevicesInfo.cs  NativeDataFormat.cs
SoundFlow/SoundFlow/Utils/: Extensions.cs  MathHelper.cs
SoundFlow/Src/: SoundFlow.targets
SoundFlow/Src/Abstracts/: AudioAnalyzer.cs
SoundFlow/Src/Components/: Recorder.cs  WsolaTimeStretcher.cs
SoundFlow/Src/Editing/: AudioSegment.cs  AudioSegmentSettings.cs
SoundFlow/Src/Enums/: EncodingFormat.cs  Result.cs
SoundFlow/Src/Exceptions/: BackendException.cs
SoundFlow/Src/Interfaces/: ISoundDecoder.cs  ISoundPlayer.cs  IVisualizationContext.cs
SoundFlow/Src/Modifiers/: BassBoosterModifier.cs  MultiChannelChorusModifier.cs  TrebleBoosterModifier.cs
SoundFlow/Src/Providers/: StreamDataProvider.cs
SoundFlow/Src/Utils/: Extensions.cs
SoundFlow/Src/Visualization/: LevelMeterAnalyzer.cs
Src/: SoundFlow.csproj  SoundFlow.targets
Src/Abstracts/: AudioAnalyzer.cs  AudioEngine.cs  SoundComponent.cs  SoundModifier.cs  SoundPlayerBase.cs
Src/Components/: Mixer.cs  Oscillator.cs  Recorder.cs  SoundPlayer.cs  SurroundPlayer.cs  VoiceActivityDetector.cs
Src/Editing/: Composition.cs  FadeCurveType.cs  LoopSettings.cs  Track.cs  TrackSettings.cs
Src/Enums/: EncodingFormat.cs  PlaybackState.cs  Result.cs
Src/Experimental/: NoiseReductionModifier.cs
Src/Interfaces/: ISoundDataProvider.cs  ISoundEncoder.cs  ISoundPlayer.cs  IVisualizer.cs
Src/Modifiers/: AlgorithmicReverbModifier.cs  ChorusModifier.cs  CompressorModifier.cs  DelayModifier.cs  HighPassFilter.cs  NoiseReductionModifier.cs  ParametricEqualizer.cs
Src/Providers/: AssetDataProvider.cs  ChunkedDataProvider.cs  MicrophoneDataProvider.cs  NetworkDataProvider.cs  RawDataProvider.cs  StreamDataProvider.cs
Src/Structs/: NativeDataFormat.cs
Src/Utils/: Extensions.cs  MathHelper.cs
Src/Visualization/: LevelMeterVisualizer.cs  SpectrumAnalyzer.cs  SpectrumVisualizer.cs  WaveformVisualizer.cs
Unity/Assets/: Test.unity
Unity/ProjectSettings/: ProjectSettings.asset
Unity/UserSettings/: EditorUserSettings.asset
UserSettings/: EditorUserSettings.asset
(+161 files in other folders)
